dist/bookorbit/Service.bookorbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: bookorbit-bookorbit-deployment-c8f1541f
  type: ClusterIP
